[package]
name = "kernel"
version = "0.0.0"
authors = ["Charlie Somerville <charlie@charlie.bz>"]
edition = "2018"

[dependencies]
alloc_collections = { path = "../alloc_collections" }
bitflags = "1.0"
core = { package = "core-futures-tls", version = "0.1" }
interface = { path = "../interface" }
kernel_derive = { path = "../kernel_derive" }
static_assertions = "0.3"
x86_64 = "0.7"
